--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -14,6 +14,35 @@ services:
       - .env
     restart: always
 
+  wordpress:
+    build:
+      context: ./requirements/wordpress
+    container_name: wordpress
+    volumes:
+      - wordpress_files:/var/www/html
+    networks:
+      - inception
+    env_file:
+      - .env
+    depends_on:
+      - mariadb
+    restart: always
+
+  nginx:
+    build:
+      context: ./requirements/nginx
+    container_name: nginx
+    ports:
+      - "443:443"
+    volumes:
+      - wordpress_files:/var/www/html
+    networks:
+      - inception
+    depends_on:
+      - wordpress
+    restart: always
+
+
 volumes:
   mariadb_data:
     driver: local
@@ -22,6 +51,14 @@ volumes:
       device: /home/isainz-r/Volumenes/MD
       o: bind
     name: mariadb_data
+
+  wordpress_files:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/isainz-r/Volumenes/WP
+      o: bind
+    name: wordpress_files
 
 networks:
   inception:
