--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,18 +1,25 @@
 FROM debian:bullseye
 
-#Install dependencies
-RUN apt-get update && apt-get install -y php7.4 php7.4-mysql php7.4-fpm curl mariadb-client wget unzip && rm -rf /var/lib/apt/lists/*
+# Install dependencies
+RUN apt-get update && apt-get install -y \
+    php7.4 php7.4-mysql php7.4-fpm curl mariadb-client wget unzip less \
+    && rm -rf /var/lib/apt/lists/*
 
+# Install WP-CLI
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
+    && chmod +x wp-cli.phar \
+    && mv wp-cli.phar /usr/local/bin/wp
+
+# Copy files
 WORKDIR /tmp
-
-#Dwonload and extract Wordpress
 RUN curl -O https://wordpress.org/latest.tar.gz && tar -xzf latest.tar.gz && mv wordpress /tmp/wp && rm latest.tar.gz
 
 COPY conf/www.conf /etc/php/7.4/fpm/pool.d/
 COPY tools/setup.sh /setup.sh
 RUN chmod +x /setup.sh
+
 EXPOSE 9000
 
 WORKDIR /var/www/html
-
 ENTRYPOINT ["/setup.sh"]
+
