--- a/srcs/.env
+++ b/srcs/.env
@@ -8,7 +8,7 @@ MYSQL_HOST=mariadb
 # WordPress config
 DOMAIN_NAME=isainz-r.42.fr
 WP_TITLE="INES WP"
-WP_ADMIN_USER=admin_user
+WP_ADMIN_USER=user
 WP_ADMIN_PASSWORD=admin_password
 WP_ADMIN_EMAIL=isainz-r@student.42madrid.com
 
