--- a/srcs/requirements/mariadb/conf/my.cnf
+++ b/srcs/requirements/mariadb/conf/my.cnf
@@ -1,25 +1,56 @@
+# Global section for server-wide options (usually left empty or used for general server settings)
 [server]
 
+# Section for the main MariaDB server daemon (mysqld)
 [mysqld]
 
+# Listen on all network interfaces (allows external connections)
 bind-address = 0.0.0.0
 
-user                    = mysql
-pid-file                = /run/mysqld/mysqld.pid
-socket                  = /run/mysqld/mysqld.sock
-port                    = 3306
-basedir                 = /usr
-datadir                 = /var/lib/mysql
-tmpdir                  = /tmp
-lc-messages-dir         = /usr/share/mysql
-query_cache_size        = 16M
-expire_logs_days        = 10
-log_error				= /var/log/mysql/error.log
-character-set-server	= utf8mb4
-collation-server		= utf8mb4_general_ci
+# Set the user that the MariaDB server will run as
+user = mysql
 
+# Path to the PID file that stores the server's process ID
+pid-file = /run/mysqld/mysqld.pid
+
+# Path to the socket file for local connections
+socket = /run/mysqld/mysqld.sock
+
+# Port number MariaDB will listen on
+port = 3306
+
+# Base installation directory of MariaDB
+basedir = /usr
+
+# Location of the database files
+datadir = /var/lib/mysql
+
+# Directory for storing temporary files
+tmpdir = /tmp
+
+# Directory where localized error messages are stored
+lc-messages-dir = /usr/share/mysql
+
+# Amount of memory allocated for the query cache (used to speed up repeated queries)
+query_cache_size = 16M
+
+# Automatically delete binary logs older than this number of days
+expire_logs_days = 10
+
+# Path to the error log file
+log_error = /var/log/mysql/error.log
+
+# Default character set used by the server
+character-set-server = utf8mb4
+
+# Default collation (sorting rules) used by the server
+collation-server = utf8mb4_general_ci
+
+# Section for embedded server options (usually not used)
 [embedded]
 
+# Section for MariaDB-specific options (generally used for MariaDB extensions/settings)
 [mariadb]
 
+# Section for options specific to MariaDB version 10.3
 [mariadb-10.3]
