--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,23 +1,58 @@
 server {
+    # Listen on port 443 with SSL enabled (IPv4)
     listen 443 ssl;
+
+    # Listen on port 443 with SSL enabled (IPv6)
     listen [::]:443 ssl;
+
+    # Define the server name (domain)
     server_name isainz-r.42.fr;
+
+    # Path to the SSL certificate file
     ssl_certificate /etc/nginx/certs/localhost.crt;
+
+    # Path to the SSL private key file
     ssl_certificate_key /etc/nginx/certs/localhost.key;
+
+    # Only allow TLS version 1.2 for better security
     ssl_protocols TLSv1.2;
+
+    # Default index file to serve
     index index.php;
+
+    # Root directory for the website files
     root /var/www/html;
+
+    # Location block for handling requests to the root or directories
     location / {
+        # Try to serve the requested URI as a file or directory, else fallback to index.php
         try_files $uri $uri/ /index.php$is_args$args;
     }
+
+    # Location block for PHP file requests
     location ~ \.php$ {
+        # Try to serve the PHP file, return 404 if not found
         try_files $uri =404;
+
+        # Split the path for PHP processing (e.g., index.php/some/path)
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
+
+        # Forward PHP requests to the FastCGI server (e.g., PHP-FPM container named wordpress on port 9000)
         fastcgi_pass wordpress:9000;
+
+        # Default file to serve if not specified
         fastcgi_index index.php;
+
+        # Include standard FastCGI parameters
         include fastcgi_params;
+
+        # Set the script filename parameter (required by PHP)
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+
+        # Provide additional path info if present
         fastcgi_param PATH_INFO $fastcgi_path_info;
+
+        # Set timeout for FastCGI responses to avoid premature termination
         fastcgi_read_timeout 300;
     }
 }
