--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -1,12 +1,34 @@
-[www]
+[www]  ; # Define a pool named "www"
+
+; Set the Unix user that the FPM processes will run as
 user = www-data
+
+; Set the Unix group that the FPM processes will run as
 group = www-data
+
+; Address and port where PHP-FPM will listen for incoming FastCGI requests
 listen = 0.0.0.0:9000
+
+; Set the owner of the Unix socket or listener
 listen.owner = www-data
+
+; Set the group of the Unix socket or listener
 listen.group = www-data
+
+; Set the permission mode of the socket
 listen.mode = 0660
+
+; Use the dynamic process manager mode (spawns processes based on demand)
 pm = dynamic
+
+; Maximum number of child processes that can be alive at the same time
 pm.max_children = 25
+
+; Number of child processes created on startup
 pm.start_servers = 5
+
+; Minimum number of idle (waiting) server processes
 pm.min_spare_servers = 1
+
+; Maximum number of idle (waiting) server processes
 pm.max_spare_servers = 10
