--- a/srcs/.env
+++ b/srcs/.env
@@ -1,19 +1,46 @@
 # Database config
+
+# Name of the WordPress database to be created or used
 MYSQL_DATABASE=wordpress
+
+# Username for the WordPress database
 MYSQL_USER=wp_user
+
+# Root password for the MariaDB root user
 MYSQL_ROOT_PASSWORD=root_password
+
+# Password for the WordPress database user
 MYSQL_PASSWORD=wp_password
+
+# Hostname of the MariaDB server (container name or service name in Docker Compose)
 MYSQL_HOST=mariadb
 
+
 # WordPress config
+
+# Domain name where WordPress will be hosted
 DOMAIN_NAME=isainz-r.42.fr
+
+# Title of the WordPress website
 WP_TITLE="INES WP"
+
+# WordPress admin username
 WP_ADMIN_USER=user
+
+# WordPress admin password
 WP_ADMIN_PASSWORD=admin_password
+
+# WordPress admin email
 WP_ADMIN_EMAIL=isainz-r@student.42madrid.com
 
-# Second user
-WP_USER=isainz-r
-WP_USER_PASSWORD=user_password
-WP_USER_EMAIL=user@student.42m.com
 
+# Second user
+
+# Username for an additional WordPress user
+WP_USER=isainz-r
+
+# Password for the additional WordPress user
+WP_USER_PASSWORD=user_password
+
+# Email address for the additional WordPress user
+WP_USER_EMAIL=user@student.42m.com
